# penrose

./: .gitignore  Cargo.toml
crates/penrose_keysyms/: Cargo.toml
crates/penrose_keysyms/src/: lib.rs
crates/penrose_menu/: Cargo.toml
crates/penrose_proc/: Cargo.toml
crates/penrose_proc/src/: stub.rs
examples/dynamic_workspaces/: main.rs
examples/simple_config_with_hooks/: main.rs
src/: __test_helpers.rs  lib.rs
src/contrib/: actions.rs  layouts.rs  mod.rs
src/core/: bindings.rs  client.rs  config.rs  data_types.rs  hooks.rs  macros.rs  mod.rs  ring.rs  screen.rs  workspace.rs
src/core/layout/: layout.rs  layouts.rs  mod.rs
src/core/manager/: clients.rs  event.rs  layout.rs  mod.rs  screens.rs  util.rs  workspaces.rs
src/core/xconnection/: atom.rs  event.rs  mod.rs  property.rs
src/draw/: mod.rs
src/x11rb/: xconn.rs
src/xcb/: api.rs  draw.rs  mod.rs  xconn.rs
tests/: hook_tests.rs  serialization_tests.rs
tests/common/: mod.rs
