[package]
name = "penrose"
version = "0.2.1"
edition = "2021"
authors = ["sminez <innes.andersonmorrison@gmail.com>"]
license = "MIT"
repository = "https://github.com/sminez/penrose"
documentation = "https://docs.rs/penrose"
readme = "README.md"
description = "A tiling window manager library inspired by dwm and xmonad"
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md"
]
keywords = [ "windowmanager", "window", "manager", "x11" ]
categories = [ "window manager" ]

[workspace]
members = [ "crates/*" ]

[features]
default = ["xcb", "xcb_draw", "keysyms"]
keysyms = ["penrose_keysyms"]
x11rb-xcb = ["x11rb", "x11rb/allow-unsafe-code"]
xcb_draw = ["cairo-rs", "cairo-sys-rs", "pango", "pangocairo"]

[dependencies]
penrose_keysyms = { version = "0.1.1", path = "crates/penrose_keysyms", optional = true }
penrose_proc = { version = "0.1.3", path = "crates/penrose_proc" }

bitflags = "1.3"
nix = "0.25"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
thiserror = "1.0"
tracing = { version = "0.1", features = ["attributes", "log"] }
cairo-rs = { version = "0.15", features = ["xcb"], optional = true }
cairo-sys-rs = { version = "0.15", optional = true }
pangocairo = { version = "0.15", optional = true }
pango = { version = "0.15", optional = true }
xcb = { version = "0.10", features = ["randr"], optional = true }
x11rb = { version = "0.10", features = ["randr"], optional = true }

[dev-dependencies]
paste = "1.0"
simplelog = "0.12"
tracing-subscriber = "0.3"
test-case = "2.0"
